--- a/Frontend/src/components/MockInterview.css
+++ b/Frontend/src/components/MockInterview.css
@@ -41,6 +41,7 @@
   display: flex;
   justify-content: space-evenly;
   align-items: center;
+  flex-wrap: wrap;
   height: 100%;
   width: 75vw;
 }
@@ -49,23 +50,23 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 25rem;
-  width: 25rem;
-  background-color: aqua;
+  height: 400px;
+  width: 400px;
+  background-color: var(--primary);
   border-radius: 10px;
 }
 
 .personalitycard .circle {
-  height: 15rem;
-  width: 15rem;
+  height: 70%;
+  width: 70%;
   border-radius: 100%;
   background-color: white;
 }
 
 .personalitycard .circle img {
   border-radius: 100%;
-  height: 15rem;
-  width: 15rem;
+  height: 100%;
+  width: 100%;
 }
 
 .sidebar {
@@ -83,15 +84,13 @@
   align-self: flex-start;
 }
 
-.AIflex
-{
+.AIflex {
   display: flex;
   padding: 10px 0;
   justify-content: flex-start;
 }
 
-.userflex
-{
+.userflex {
   display: flex;
   padding: 10px 0;
   justify-content: flex-end;
@@ -105,7 +104,7 @@
   align-self: flex-end;
 }
 
-.innertext{
+.innertext {
   font-size: 1rem;
   font-weight: 500;
   text-align: center;
@@ -174,6 +173,12 @@
   .text-actions {
     justify-content: space-between;
   }
+
+  .personalitycard {
+    height: 40%;
+    width: 90%;
+  }
+
 }
 
 @media (max-width: 480px) {
@@ -184,5 +189,15 @@
   .btn-large {
     padding: calc(var(--spacing) * 1.5) calc(var(--spacing) * 3);
     font-size: 1rem;
+  }
+
+  .personalitycard {
+    width: 90%;
+    height: 40%;
+  }
+
+  .personalitycard .circle {
+    height: 40%;
+    width: 70%;
   }
 }
