--- a/Frontend/src/components/MockInterview.css
+++ b/Frontend/src/components/MockInterview.css
@@ -61,12 +61,30 @@
   width: 70%;
   border-radius: 100%;
   background-color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
 
 .personalitycard .circle img {
   border-radius: 100%;
   height: 100%;
   width: 100%;
+}
+
+.personalitycard .circle .face {
+  background-color: var(--primary);
+  height: 30%;
+  width: 30%;
+  border-radius: 100%;
+}
+.personalitycard .circle .body {
+  background-color: var(--primary);
+  height: 30%;
+  width: 70%;
+  border-radius: 100%;
+
 }
 
 .sidebar {
